--- a/intro.html
+++ b/intro.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Changelog</title>
+<title>Exponent Madness</title>
 <link rel="stylesheet" href="style1.css">
 </head>
 <body>
 
-<center><h1>Changelog of Exponent Madness</h1>
-<h2>2<sup>nd</sup> January, 2019</h2>
-<p>Added changelog.</p>
-<h2>31<sup>st</sup> December, 2018</h2>
-<p>Added support for numbers bigger than 1.79e308.</p>
-<p>Added Standard notation.</p>
-<h2>27<sup>th</sup> December, 2018</h2>
-<p>Added Break Numerals.</p>
-<h2>23<sup>rd</sup> December, 2018</h2>
-<p>Added Micro Prestige and Pre-Micro Prestige stuff.</p>
-<p>Added A upgrades.</p>
-<h2>22<sup>nd</sup> November, 2018</h2>
-<p>Added saving, export/import and hard reset.</p>
-<p>Added visuals.</p>
-<h2>21<sup>st</sup> November, 2018</h2>
-<p>Game created.</p>
-<h3><a href="https://itmarki.github.io/exponent-madness/">Exponent Madness</a></h3></center>
+<center><h1>Exponent Madness</h1>
+<h2>An incremental game by ItMarki and math12346.</h3>
+<h3>About</h3>
+<p>Exponent Madness is a game of multiplication and more.</p>
+<h3>Credits</h3>
+<ul>
+  <li>ItMarki for basic ideas.</li>
+  <li>username5243 for basic game creation.</li>
+  <li>NGC for visuals.</li>
+  <li>math12346 for advancement of the game.</li>
+</ul>
+</center>
 
 </body>
 </html>
