--- a/intro.html
+++ b/intro.html
@@ -18,6 +18,7 @@
   <li>NGC for visuals.</li>
   <li>math12346 for advancement of the game.</li>
 </ul>
+<h3><a href="https://itmarki.github.io/exponent-madness/">Play</a></h3></center>
 
 </body>
 </html>
