--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
         <head>
-                <title>Exponent Madness</title>
+                	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+	<style>
+		body {
+			margin:0;
+			font-family:Montserrat
+		}
+		<title>Exponent Madness</title>
 		<script src='break_infinity.js'></script>
                 <script src= "main.js"></script>
                 <link rel="stylesheet" type="text/css" href="style.css">
