--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
         <head>
-		<title>Exponent Madness</title>
+                <title>Exponent Madness</title>
 		<script src='break_infinity.js'></script>
                 <script src= "main.js"></script>
                 <link rel="stylesheet" type="text/css" href="style.css">
@@ -81,7 +81,10 @@
 					<td><button class = 'button unbuyable' onclick = 'buyBupg(7)' id='B7'>You get 1 µE every button click. Cost: <div id = 'B7Cost'>18K</div> µE</button></td>
 					<td><button class = 'button unbuyable' onclick = 'buyBupg(8)' id='B8'>The growth factor is higher based on total button clicks (1+(log(clicks+1))/310). Cost: <div id = 'B7Cost'>100K</div> µE</button></td>
 					<td><button class = 'button unbuyable' onclick = 'buyBupg(9)' id='B9'> You now gain 1.5 CP/s. Cost: <div id = 'B9Cost'>240K</div> µE</button></td>
+				</tr>
+				<tr>
 					<td><button class = 'button unbuyable' onclick = 'buyBupg(10)' id='B10'>Unlock button autoclicker. Cost: <div id = 'B10Cost'>800K</div> µE</button></td>
+					<td><button class = 'button unbuyable' onclick = 'buyBupg(11)' id='B11'>Vastly improve micro essence formula. Cost: <div id = 'B11Cost'>2.5M</div> µE</button></td>
 				</tr>
 			</table>
 		</div>
@@ -92,6 +95,6 @@
 			<p>Time in this micro prestige: <div id = 'microTime'>0 seconds</div></p>
 			<p>Total µE gained: <div id = 'totalue'>0</div></p>
 		</div>
-                <center><h3><a href="https://itmarki.github.io/exponent-madness/changelog.html">Changelog</a></h3></center>
+		<center><h3><a href="https://math123468.github.io/exponent-madness/changelog.html">Changelog</a></h3></center>
         </body>
 </html>
