--- a/changelog.html
+++ b/changelog.html
@@ -7,6 +7,8 @@
 <body>
 
 <center><h1>Changelog of Exponent Madness</h1>
+<h2>2<sup>nd</sup> February, 2019</h2>
+<p>Added Milli Prestige.</p>
 <h2>30<sup>th</sup> January, 2019</h2>
 <p>Added B11 upgrade.</p>
 <h2>2<sup>nd</sup> January, 2019</h2>
