--- a/index.html
+++ b/index.html
@@ -112,6 +112,6 @@
 			<p>Time in this micro prestige: <div id = 'microTime'>0 seconds</div></p>
 			<p>Total µE gained: <div id = 'totalue'>0</div></p>
 		</div>
-		<center><h3><a href="https://math123468.github.io/exponent-madness/changelog.html">Changelog</a></h3></center>
+		<center><h3><a href="https://itmarki.github.io/exponent-madness/">Changelog</a></h3></center>
         </body>
 </html>
