--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 		<div id="main" style="display:inline-block">
                         <div id="increaseNumber">
                                 <button class="button unbuyable" onclick="step()">Multiply the number by <div id="multDisplay">1.5</div> for 3 Click Points</button>
-                                <p>You have <div id="clickPoints">0</div> Click Points.</p>
-                                <p>You are gaining <div id = 'cpPerSec'>1</div> per second</p>
-                                <p>Your max Click Points is <div id = 'maxCP'>3</div></p>
+				<p>You have <span id="clickPoints">0</span> Click Points.</p>
+				<p>You are gaining <span id = 'cpPerSec'>1</span> per second</p>
+                                <p>Your max Click Points is <span id = 'maxCP'>3</span></p>
                         </div>
                         <div id = 'numberUpgrades'>
                                 <button class = 'button unbuyable' onclick = 'numUpgrade()' id = 'Num1'>Increase growth rate by 0.25 percent. Cost: Divides your number by<div id = 'numCost'>1000</div></button>
@@ -39,7 +39,7 @@
                         <button class="button unbuyable" onclick="save()">Save</button>
                         <button class="button unbuyable" onclick="importGame()">Import</save>
                         <button class="button unbuyable" onclick="exportGame()">Export</button>
-                        <button class="button unbuyable" onclick="switchNotation()">Notation: <div id="notationDisplay">Standard</div></button>
+                        <button class="button unbuyable" onclick="switchNotation()">Notation: <span id="notationDisplay">Standard</span></button>
                         <button class="button unbuyable" onclick="hardReset()">Reset the game</button>
                         <span id="exportInfo" style="display:none">Here is your export save:<input id="exportSave"></input></span>
                 </div>
