Attempt to make stat look better
"If this works I will be the god" :tm:

--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
 				</tr>
 			</table>
 		</div>
-		<div id = 'stats' style = 'display:none; text-align:left'>
-			<p>You have played for<span id = 'timePlayed'>0 seconds</span></p>
-			<p>You have clicked the button<span id = 'buttonClicks'>0</span>times.</p>
-			<p>You have micro prestiged <span id = 'microPrestiges'>0</span> times.</p>
-			<p>Time in this micro prestige: <span id = 'microTime'>0 seconds</span></p>
-			<p>Total µE gained: <span id = 'totalue'>0</span></p>
+		<div id = 'stats' style = 'display:none'>
+			<div>You have played for <span id = 'timePlayed'>0 seconds</span></div>
+			<div>You have clicked the button <span id = 'buttonClicks'>0</span> times.</div>
+			<div>You have micro prestiged <span id = 'microPrestiges'>0</span> times.</div>
+			<div>Time in this micro prestige: <span id = 'microTime'>0 seconds</span></div>
+			<div>Total µE gained: <span id = 'totalue'>0</span></div>
 		</div>
 		<center><h3><a href="https://itmarki.github.io/exponent-madness/changelog.html">Changelog</a></h3></center>
         </body>
