Add id for increase number button to reference it in code

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </div>
 		<div id="main" style="display:inline-block">
                         <div id="increaseNumber">
-                                <button class="button unbuyable" onclick="step()">Multiply the number by <span id="multDisplay">1.5</span> for 3 Click Points</button>
+                                <button class="button unbuyable" onclick="step()" id="increaseNumberBtn">Multiply the number by <span id="multDisplay">1.5</span> for 3 Click Points</button>
 				<p>You have <span id="clickPoints">0</span> Click Points.</p>
 				<p>You are gaining <span id = 'cpPerSec'>1</span> per second</p>
                                 <p>Your max Click Points is <span id = 'maxCP'>3</span></p>
