--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@ window.onerror = function(msg, url, line, col, error) {
    // You can view the information in an alert to see things working like this:
    alert("Error: " + msg + "\nurl: " + url + "\nline: " + line + extra);
 
+   alert("Will stop game now to protect your savefile")
+   stopInterval()
+	
    // TODO: Report this error via ajax so you can keep track
    //       of what pages have JS issues
 
