--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
         <head>
                 <title>Exponent Madness</title>
-		<script type="text/javascript"> // https://stackoverflow.com/questions/951791/javascript-global-error-handling
+		<script src='break_infinity.js'></script>
+                <script src= "main.js"></script>
+			<script type="text/javascript"> // https://stackoverflow.com/questions/951791/javascript-global-error-handling
 window.onerror = function(msg, url, line, col, error) {
    // Note that col & error are new to the HTML 5 spec and may not be 
    // supported in every browser.  It worked for me in Chrome.
@@ -23,12 +25,11 @@ window.onerror = function(msg, url, line, col, error) {
    // Internet Explorer) will be suppressed.
    return suppressErrorAlert;
 };
-</script>
-		<script src='break_infinity.js'></script>
-                <script src= "main.js"></script>
+window.onload = init
+		</script>
                 <link rel="stylesheet" type="text/css" href="style.css">
         </head>
-        <body onload="init()">
+        <body>
 		<div id="top">
                 <p>Number: <div id="numDisplay">1</div></p>
                 <p style="text-align:right;"><div id="microEssenceInfo" style="display:none">Micro Essence: <span id="microEssenceDisplay">0</span></div></p>
