--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ window.onerror = function(msg, url, line, col, error) {
    alert("Error: " + msg + "\nurl: " + url + "\nline: " + line + extra);
 
    alert("Will stop game now to protect your savefile")
+   errorOccured = true
    stopInterval()
 	
    // TODO: Report this error via ajax so you can keep track
