--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ window.onload = init
 		<button id = 'milliPrestigeTab' class = 'button unbuyable' style = 'display:none' onclick = 'switchTab("milliprestige")'>Milli Prestige</button>
 </div>
 		<div id="main" style="display:inline-block">
+			<div id="numberButtons">
                         <div id="increaseNumber">
                                 <button class="button unbuyable" onclick="step()" id="increaseNumberBtn">Multiply the number by <span id="multDisplay">1.5</span> for 3 Click Points</button>
 				<p>You have <span id="clickPoints">0</span> Click Points.</p>
@@ -53,7 +54,8 @@ window.onload = init
                                 <button class = 'button unbuyable' onclick = 'numUpgrade()' id = 'Num1'>Increase growth rate by 0.25 percent. Cost: Divides your number by <span id = 'numCost'>1000</span></button>
                                 <button class = 'button unbuyable' onclick = 'maxCPUpgrade()' id = 'CP1'>Increase your max CP by 1. Cost: Divides your number by <span id = 'maxCPCost'>1000</span></button>
                                 <button class = 'button unbuyable' onclick = 'CPSecUpgrade()' id = 'CP2'>Increase your CP/sec by 1. Cost: Divides your number by <span id = 'secCPCost'>10B</span></button>
-                        </div>                
+                        </div>      
+			</div>
                         <div id="microPrestigeElement" style="display:none">
                                 Your number has overflowed, you must reset to continue.
                                 <button class="button unbuyable" onclick="microPrestige()">Reset your number, but get 1 Micro essence for upgrades.</button>
