--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ window.onload = init
                         </div>
                         <div id = 'numberUpgrades'>
                                 <button class = 'button unbuyable' onclick = 'numUpgrade()' id = 'Num1'>Increase growth rate by 0.25 percent. Cost: Divides your number by <span id = 'numCost'>1000</span></button>
-                                <button class = 'button unbuyable' onclick = 'maxCPUpgrade()' id = 'CP1'>Increase your max CP by 1. Cost: Divides your number by <span id = 'maxCPCost'>1000</span></button>
+                                <button class = 'button unbuyable' onclick = 'maxCPUpgrade()' id = 'CP1'>Increase your max CP by <span id='CP1Increase'>1</span>. Cost: Divides your number by <span id = 'maxCPCost'>1000</span></button>
                                 <button class = 'button unbuyable' onclick = 'CPSecUpgrade()' id = 'CP2'>Increase your CP/sec by 1. Cost: Divides your number by <span id = 'secCPCost'>10B</span></button>
                         </div>      
 			</div>
