--- a/changelog.html
+++ b/changelog.html
@@ -7,6 +7,8 @@
 <body>
 
 <center><h1>Changelog of Exponent Madness</h1>
+<h2>3<sup>rd</sup> June, 2019</h2>
+<p>Nyan cat decided to pick up this project and polish it by a bit, prob more than a bit</p>
 <h2>2<sup>nd</sup> February, 2019</h2>
 <p>Added Milli Prestige.</p>
 <h2>30<sup>th</sup> January, 2019</h2>
