Changed absolute path into relative path for changelog

--- a/index.html
+++ b/index.html
@@ -140,6 +140,6 @@ window.onload = init
 			<div>Time in this micro prestige: <span id = 'microTime'>0 seconds</span></div>
 			<div>Total µE gained: <span id = 'totalue'>0</span></div>
 		</div>
-		<center><h3><a href="https://itmarki.github.io/exponent-madness/changelog.html">Changelog</a></h3></center>
+		<center><h3><a href="./changelog.html">Changelog</a></h3></center>
         </body>
 </html>
