--- a/changelog.html
+++ b/changelog.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Changelog</title>
-<link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-<center><h1>Changelog of Exponent Madness</h1>
-<h2>3<sup>rd</sup> June, 2019</h2>
-<p>Nyan cat decided to pick up this project and polish it by a bit, prob more than a bit</p>
-<h2>2<sup>nd</sup> February, 2019</h2>
-<p>Added Milli Prestige.</p>
-<h2>30<sup>th</sup> January, 2019</h2>
-<p>Added B11 upgrade.</p>
-<h2>2<sup>nd</sup> January, 2019</h2>
-<p>Added changelog.</p>
-<h2>31<sup>st</sup> December, 2018</h2>
-<p>Added support for numbers bigger than 1.79e308.</p>
-<p>Added Standard notation.</p>
-<h2>27<sup>th</sup> December, 2018</h2>
-<p>Added Break Numerals.</p>
-<h2>23<sup>rd</sup> December, 2018</h2>
-<p>Added Micro Prestige and Pre-Micro Prestige stuff.</p>
-<p>Added A upgrades.</p>
-<h2>22<sup>nd</sup> November, 2018</h2>
-<p>Added saving, export/import and hard reset.</p>
-<p>Added visuals.</p>
-<h2>21<sup>st</sup> November, 2018</h2>
-<p>Game created.</p>
-<h3><a href="https://itmarki.github.io/exponent-madness/">Exponent Madness</a></h3></center>
-
-</body>
+  <head>
+    <title>Changelog</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <center>
+      <h1>Changelog of Exponent Madness</h1>
+      <h2>3<sup>rd</sup> June, 2019</h2>
+      <p>Nyan cat decided to pick up this project and polish it by a bit, prob more than a bit</p>
+      <h2>2<sup>nd</sup> February, 2019</h2>
+      <p>Added Milli Prestige.</p>
+      <h2>30<sup>th</sup> January, 2019</h2>
+      <p>Added B11 upgrade.</p>
+      <h2>2<sup>nd</sup> January, 2019</h2>
+      <p>Added changelog.</p>
+      <h2>31<sup>st</sup> December, 2018</h2>
+      <p>Added support for numbers bigger than 1.79e308.</p>
+      <p>Added Standard notation.</p>
+      <h2>27<sup>th</sup> December, 2018</h2>
+      <p>Added Break Numerals.</p>
+      <h2>23<sup>rd</sup> December, 2018</h2>
+      <p>Added Micro Prestige and Pre-Micro Prestige stuff.</p>
+      <p>Added A upgrades.</p>
+      <h2>22<sup>nd</sup> November, 2018</h2>
+      <p>Added saving, export/import and hard reset.</p>
+      <p>Added visuals.</p>
+      <h2>21<sup>st</sup> November, 2018</h2>
+      <p>Game created.</p>
+      <h3><a href="https://itmarki.github.io/exponent-madness/">Exponent Madness</a></h3>
+    </center>
+  </body>
 </html>
