Make Number display a div

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <div id="top">
-      <p>Number: <span id="numDisplay">1</span></p>
+      <dov<p>Number: <span id="numDisplay">1</span></p>
       <div id="microEssenceInfo" style="display:none">
         <p style="text-align:right;">Micro Essence: <span id="microEssenceDisplay">0</span></p>
       </div>
