--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
          var extra = !col ? '' : '\ncolumn: ' + col;
          extra += !error ? '' : '\nerror: ' + error;
          // You can view the information in an alert to see things working like this:
-         alert("Error: " + msg + "\nurl: " + url + "\nline: " + line + extra);
+         alert("\nurl: " + url + "\nline: " + line + "\nerror:" + msg + extra);
          alert("Will stop game now to protect your savefile")
          errorOccured = true
          stopInterval()
